f_reskin: splash top and bottom bgs added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_manual_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_manual_ride.xml
@@ -30,6 +30,7 @@
             android:text="@string/label_edt_manual_ride"
             android:textSize="17sp"
             android:visibility="visible"
+            android:textColor="@color/textColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/backgroundPhone"
             app:layout_constraintHorizontal_bias="0.0"
@@ -65,7 +66,8 @@
             android:paddingStart="8dp"
             android:paddingTop="2dp"
             android:text=""
-            android:textColor="@color/text_color"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColorLight"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/backgroundPhone"
             app:layout_constraintStart_toStartOf="@id/backgroundPhone"
@@ -83,9 +85,10 @@
             android:drawablePadding="4dp"
             android:hint="@string/hint_edt_phone"
             android:inputType="phone"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColorLight"
             android:maxLines="1"
             android:padding="2dp"
-            android:textColor="@color/text_color_splash"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/backgroundPhone"
             app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
@@ -102,12 +105,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            style="@style/ButtonOrange"
+            style="@style/ButtonTheme"
             app:layout_constraintTop_toBottomOf="@id/space"
             android:text="@string/action_request_manual_ride"
-            android:id="@+id/btnRequestManualRide"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:id="@+id/btnRequestManualRide" />
         
         <TextView
             android:id="@+id/labelDescriptionManualRide"
@@ -119,6 +120,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:gravity="center"
             android:textSize="17sp"
+            android:textColor="@color/textColorMedium"
             app:layout_constrainedWidth="true"
             app:layout_constraintTop_toBottomOf="@id/btnRequestManualRide"
             android:layout_width="wrap_content"
