--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_toolbar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_toolbar.xml
@@ -14,7 +14,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/black_top_bar_bg"
+        android:background="@color/colorPrimary"
         android:textAlignment="center"
         app:titleTextColor="@color/white">
 
@@ -26,7 +26,7 @@
             android:textAllCaps="true"
             android:textSize="18sp"
             android:layout_gravity="center"
-            android:textColor="@color/white" />
+            android:textColor="@color/textColorTitle" />
 
     </android.support.v7.widget.Toolbar>
 
