--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -18,6 +18,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="102dp"
+            android:src="@drawable/splash_top_bg"
+            android:scaleType="fitXY"
+            android:visibility="@integer/splash_scene_bg_visibility"
+            />
+
         <Spinner
             android:id="@+id/language_spinner"
             android:layout_width="wrap_content"
@@ -174,6 +182,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/backgroundPhone"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="102dp"
+            android:src="@drawable/splash_bottom_bg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:scaleType="fitXY"
+            android:visibility="@integer/splash_scene_bg_visibility"
+            />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
