--- a/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
@@ -20,16 +20,16 @@
 
     <string name="fugu_app_key">acd1fc4c36da23e421c9e357785f4d4a</string>
     <string name="fugu_app_key_test">kenwfdhwoiujGSDIUUHU82E8HD98</string>
-    <string name="images_path">TT Rides Share Driver/TT Rides Share Pictures</string>
-    <string name="file_provider">production.ttridesshare.driver.driver.provider</string>
+    <string name="images_path">TT Ride Share Driver/TT Ride Share Pictures</string>
+    <string name="file_provider">production.ttrideshare.driver.driver.provider</string>
     <string name="google_maps_api_key">AIzaSyBCcnNzpyLi5ND2KKi9MShjWkyRh6c-on4</string> <!--IMP-->
 
 
     <!--App Level Constants-->
     <drawable name="app_icon">@mipmap/ic_launcher</drawable><!--* IMP-->
-    <string name="white_label_name">TTRIDESSHARE</string><!--* IMP-->
+    <string name="white_label_name">TT Rideshare</string><!--* IMP-->
     <string name="support_email">support@jugnoo.in</string>
-    <string name="support_email_subject">TT Rides Share Driver Support</string>
+    <string name="support_email_subject">TT Ride Share Driver Support</string>
     <string name="support_phone_number">+919023121121</string>
     <string name="customer_app_download_link">https://www.jugnoo.in/</string>
     <string name="hippo_support_faq_name_default">Driver</string>
