--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -39,13 +39,18 @@
             android:id="@+id/terms"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
             android:gravity="center"
-            android:text="@string/terms"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:drawableStart="@drawable/ic_profile_about"
+            android:drawablePadding="3dp"
+            android:padding="10dp"
+            android:tag="@string/dont_touch_me"
             android:visibility="@integer/show_t_and_c_profile"
-            android:layout_marginEnd="10px"
+            android:text="@string/about"
             android:textColor="@color/white"
-            android:textSize="24px" />
+            android:textSize="13sp"
+            />
 
         <!--<LinearLayout-->
             <!--android:layout_width="wrap_content"-->
