--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -98,6 +98,7 @@
             android:text="@string/by_signing_you_agree"
             android:textColor="@color/text_color_splash_heading"
             android:textSize="14sp"
+            android:visibility="@integer/show_t_and_c"
             app:layout_constraintTop_toBottomOf="@+id/bContinue"
             />
 
@@ -106,7 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible"
-            app:constraint_referenced_ids="tvEnterName,editTextName,rvVehicleTypes,tvSelectVehicle,bContinue,bCancel,tvTermsOfUse"/>
+            app:constraint_referenced_ids="tvEnterName,editTextName,rvVehicleTypes,tvSelectVehicle,bContinue,bCancel"/>
 
     </android.support.constraint.ConstraintLayout>
 
