--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@android:color/white"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -39,6 +38,32 @@
             />
 
         <TextView
+            android:id="@+id/tvPromo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/please_enter_promo_code"
+            android:textColor="@color/text_color_splash_heading"
+            app:layout_constraintTop_toBottomOf="@+id/editTextName"
+            android:textSize="14sp"
+            />
+
+
+        <EditText
+            android:id="@+id/edtPromo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/background_white_rounded_grey_alpha_bordered"
+            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/ic_edit_text_start_drawable"
+            android:hint="@string/hint_promo_code"
+            android:inputType="textPersonName|textCapCharacters"
+            android:padding="13dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvPromo"
+            />
+
+        <TextView
             android:id="@+id/tvSelectVehicle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,7 +71,7 @@
             android:text="@string/select_vehicle_type"
             android:textColor="@color/text_color_splash_heading"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextName"
+            app:layout_constraintTop_toBottomOf="@+id/edtPromo"
             />
 
 
@@ -107,6 +132,14 @@
             android:layout_height="match_parent"
             android:visibility="visible"
             app:constraint_referenced_ids="tvEnterName,editTextName,rvVehicleTypes,tvSelectVehicle,bContinue,bCancel,tvTermsOfUse"/>
+
+
+        <android.support.constraint.Group
+            android:id="@+id/promoGroupView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:constraint_referenced_ids="tvPromo,edtPromo"/>
 
     </android.support.constraint.ConstraintLayout>
 
