--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_about.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_about.xml
@@ -12,7 +12,7 @@
         <RelativeLayout
             android:id="@+id/topBar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/top_bar_height"
+            android:layout_height="50dp"
             android:background="@color/black_top_bar_bg" >
 
             <TextView
