--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -183,7 +183,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/inRideCustomerInfoRl"
         android:layout_centerHorizontal="true"
-        android:visibility="visible"
+        android:visibility="@integer/show_driver_timer"
         android:background="@drawable/menu_black_btn_normal_rounded">
 
         <TextView
