--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:fillViewport="true"
     android:background="@android:color/white"
     android:layout_height="match_parent">
 
@@ -32,6 +33,7 @@
             android:drawablePadding="5dp"
             android:drawableStart="@drawable/ic_edit_text_start_drawable"
             android:hint="@string/name"
+            android:imeOptions="actionDone"
             android:inputType="textPersonName|textCapWords"
             android:padding="13dp"
             app:layout_constraintTop_toBottomOf="@+id/tvEnterName"
@@ -55,9 +57,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_white_rounded_grey_alpha_bordered"
-            android:drawablePadding="5dp"
-            android:drawableStart="@drawable/ic_edit_text_start_drawable"
+            android:drawablePadding="6dp"
+            android:drawableStart="@drawable/ic_ref_code"
             android:hint="@string/hint_promo_code"
+            android:imeOptions="actionDone"
             android:inputType="textPersonName|textCapCharacters"
             android:padding="13dp"
             app:layout_constraintTop_toBottomOf="@+id/tvPromo"
@@ -130,7 +133,7 @@
             android:id="@+id/groupView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
+            android:visibility="gone"
             app:constraint_referenced_ids="tvEnterName,editTextName,rvVehicleTypes,tvSelectVehicle,bContinue,bCancel,tvTermsOfUse"/>
 
 
@@ -138,7 +141,7 @@
             android:id="@+id/promoGroupView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="gone"
             app:constraint_referenced_ids="tvPromo,edtPromo"/>
 
     </android.support.constraint.ConstraintLayout>
