--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
@@ -30,6 +30,7 @@
             android:gravity="center"
             android:text="@string/Notifications"
             android:textColor="@color/white"
+            android:textAllCaps="true"
             android:textSize="40px"/>
 
     </RelativeLayout>
