--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_notification_messages.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_notification_messages.xml
@@ -18,6 +18,7 @@
             android:layout_width="241px"
             android:layout_height="342px"
             android:src="@drawable/ic_no_items"
+            android:visibility="gone"
             android:tag="mwar"
             />
 
