--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -98,7 +98,7 @@
             android:text="@string/by_signing_you_agree"
             android:textColor="@color/text_color_splash_heading"
             android:textSize="14sp"
-            android:visibility="@integer/show_t_and_c"
+            android:visibility="invisible"
             app:layout_constraintTop_toBottomOf="@+id/bContinue"
             />
 
